syntax = "proto3";

message MqMessage {
  int32 version = 1;
  string message_type = 2;
  bytes message = 3;
  bytes signature = 4;
  string receiver_node_id = 5;
  string sender_node_id = 6;
  string message_compression_algorithm = 7;
}

message ConsentRequestMqMessage {
  string request_json = 1;
  string request_message_data_url_prefix = 2;
  bytes request_message_bytes = 3;
}

message AsDataResponseMqMessage {
  string request_json = 1;
  string data_data_url_prefix = 2;
  bytes data_bytes = 3;
}